--- a/03-03/aritmatika.html
+++ b/03-03/aritmatika.html
@@ -6,20 +6,19 @@
     <title>Penugasan Aritmatika</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
     <style>
-        body {
-          background-color: #def3ee;
-          text-overflow: ellipsis;
-          font-family: "Inconsolata", monospace;
-          color: rgb(10, 17, 9);
-          width: 650px;
-          margin: 120px auto;
-      
-        }
+      body {
+        background-color: #def3ee;
+        text-overflow: ellipsis;
+        font-family: "Inconsolata", monospace;
+        color: rgb(10, 17, 9);
+        width: 680px;
+        margin: 120px auto;
+      }
     </style>
   </head>
   <body>
     <div class="title">
-      <h2 class="border" style="border: #061814;">Penugasan Aritmatika</h2>
+      <h2 class="border" style="border: #061814">Penugasan Oparator Aritmatika</h2>
       <h3>Minggu 03 - Hari Ke 3</h3>
     </div>
     <script src="tugas-aritmatika.js"></script>
