--- a/07-01/index.html
+++ b/07-01/index.html
@@ -25,7 +25,7 @@
     <h1 id="judul">Hallo Teman-Teman</h1>
     <div id="container">
       <section id="a">
-        <p id="Nu">Angka</p>
+        <p id="Nu">Menjumlahkan Angka Sebagai Berikut:</p>
         <ul id="angka">
           <li>30</li>
           <li>50</li>
@@ -34,8 +34,12 @@
           <li>70</li>
         </ul>
       </section>
+      <ul>
+        <li>
+          Jumlahnya Adalah
+          <script src="tugas.js"></script>
+        </li>
+      </ul>
     </div>
-
-    <script src="tugas.js"></script>
   </body>
 </html>
